Contacto: navbar único, mapa responsive, 'Dejanos tu mensaje', limpieza de Instagram

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -44,7 +44,7 @@
   <main> 
     <section class="banner-principal" style="background-image: url('../imagenes/banner-arcoiris.png');">
       <div  class="texto-banner">
-        <h1>Dejamos tu mensaje</h1>
+        <h1>Dejanos tu mensaje</h1>
         <h2>Estamos para escucharte</h2>
         <p>Tu voz tambien es parte de Tierra Viva</p>
       </div>
@@ -85,7 +85,7 @@
       <p class="red-extra">🕒 Horarios: Lunes a Viernes 10-17hs</p>
       <p class="agradecimiento">¡Gracias por confiar en Tierra Viva!</p>
     </section>
-</main>
+  </main>
 
 <!-- FOOTER -->
   <footer>
