--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -1,114 +1,114 @@
-<!---------------------------CONTACTO--------------------------------------------------->
+<!--CONTACTO------------------>
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tierra Viva - Inicio</title>
-  <!--bs-->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-  <!--linf a hoja scss-->
+  <title>Tierra Viva | Contacto</title>
+
+  <!-- Bootstrap (estructura + menú hamburguesa) -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Estilo principal -->
   <link rel="stylesheet" href="../css/style.css">
-  <!--font-->
-  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <!-- HEADER CON LOGO -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light px-3">
-    <div class="container-fluid">
-      <!-- Logo -->
-      <a class="navbar-brand" href="../index.html">
-        <img src="../imagenes/logo-de-Tierra-Viva-verde.png" alt="Logo Tierra Viva" width="120">
-      </a>
+  <!-- ===================================================
+       HEADER: logo + menú hamburguesa
+       =================================================== -->
+  <header class="header-con-logo">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success w-100">
+      <div class="container-fluid">
+        <!-- Logo -->
+        <a class="navbar-brand" href="../index.html">
+          <img src="../imagenes/logo-de-Tierra-Viva-verde.png" alt="Logo Tierra Viva" height="60">
+        </a>
 
-      <!-- Botón hamburguesa -->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTierraViva" aria-controls="navbarTierraViva" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+        <!-- Botón hamburguesa -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-      <!-- Menú colapsable -->
-      <div class="collapse navbar-collapse" id="navbarTierraViva">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link" href="../paginas/dulce.html">Dulce</a></li>
-          <li class="nav-item"><a class="nav-link" href="../paginas/salado.html">Salado</a></li>
-          <li class="nav-item"><a class="nav-link" href="../paginas/contacto.html">Contacto</a></li>
-        </ul>
+        <!-- Menú -->
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+            <li class="nav-item"><a class="nav-link" href="dulce.html">Dulces</a></li>
+            <li class="nav-item"><a class="nav-link" href="salado.html">Salados</a></li>
+            <li class="nav-item"><a class="nav-link active" href="contacto.html">Contacto</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+    <section class="banner-general banner-contacto">
+        <h2>Contacta con Tierra Viva</h2>
+    </section>
+    
+  <!-- ===================================================
+       MAIN: formulario + mapa (responsive)
+       =================================================== -->
+  <main class="container py-5">
+    <h2 class="text-center mb-4 text-success fw-bold">Contacta con Tierra Viva</h2>
+
+    <div class="row g-4 align-items-center">
+
+      <!-- Formulario de contacto -->
+      <div class="col-12 col-md-6">
+        <form class="formulario bg-light p-4 rounded shadow">
+          <div class="mb-3">
+            <label for="nombre" class="form-label fw-bold text-success">Nombre</label>
+            <input type="text" class="form-control" id="nombre" placeholder="Tu nombre completo" required>
+          </div>
+          <div class="mb-3">
+            <label for="correo" class="form-label fw-bold text-success">Correo electrónico</label>
+            <input type="email" class="form-control" id="correo" placeholder="ejemplo@email.com" required>
+          </div>
+          <div class="mb-3">
+            <label for="mensaje" class="form-label fw-bold text-success">Mensaje</label>
+            <textarea class="form-control" id="mensaje" rows="4" placeholder="Escribe tu mensaje aquí..." required></textarea>
+          </div>
+          <button type="submit" class="btn btn-success px-4">Enviar</button>
+        </form>
+      </div>
+
+      <!-- Mapa -->
+      <div class="col-12 col-md-6">
+        <div class="mapa shadow rounded overflow-hidden">
+          <!-- Puedes reemplazar el src del iframe por el enlace real de tu ubicación -->
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.830698253141!2d-58.38159268506171!3d-34.60836496509495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccacf86ef0f51%3A0x3c2e3192e1e8f85d!2sBuenos%20Aires%2C%20Argentina!5e0!3m2!1ses!2sar!4v1700000000000"
+            width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
       </div>
     </div>
-  </nav>
-
-  <!-- BANNER de contacto-->
-  <main> 
-    <section class="banner-principal" style="background-image: url('../imagenes/banner-arcoiris.png');">
-      <div  class="texto-banner">
-        <h1>Dejanos tu mensaje</h1>
-        <h2>Estamos para escucharte</h2>
-        <p>Tu voz tambien es parte de Tierra Viva</p>
-      </div>
-    </section>
-
-    <!-- FORMULARIO -->
-    <section class="contacto-grid">
-      <!-- Fila 2 -->
-      <form class="formulario">
-        <label for="nombre">Nombre</label>
-        <input type="text" id="nombre" name="nombre" required>
-
-        <label for="email">Correo</label>
-        <input type="email" id="email" name="email" required>
-
-        <label for="mensaje">Mensaje</label>
-        <textarea id="mensaje" name="mensaje" rows="4" required></textarea>
-
-        <button type="submit">Enviar</button>
-      </form>
-
-      <div class="mapa">
-      <iframe 
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.972403!2d-58.3816!3d-34.6037!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccaaa123456%3A0xabcdef!2sTierra%20Viva!5e0!3m2!1ses!2sar!4v1700000000000"
-        width="500px" 
-        height="500px" 
-        style="border:0;" 
-        allowfullscreen="" 
-        loading="lazy">
-        </iframe>
-      </div>
-
-      <!--Fila 3 -->
-      <p class="info-extra">📞 Teléfono: +54 11 2277 1443</p>
-      <p class="horarios">Seguinos en nuestras redes para más novedades.</p>
-
-      <!--Fila 4 -->
-      <p class="red-extra">🕒 Horarios: Lunes a Viernes 10-17hs</p>
-      <p class="agradecimiento">¡Gracias por confiar en Tierra Viva!</p>
-    </section>
   </main>
 
-<!-- FOOTER -->
-  <footer>
-    <!-- Logo Tierra Viva a la izquierda -->
-    <img class="logo-pie" src="../imagenes/logo-TierraViva-pie.png" alt="Logo Tierra Viva">
+  <!-- ===================================================
+       FOOTER: igual en todas las páginas
+       =================================================== -->
+  <footer class="d-flex justify-content-between align-items-center p-3 bg-success text-white">
+    <img src="../imagenes/logo-TierraViva-pie.png" alt="Logo Tierra Viva" class="logo-pie">
 
-    <!-- Bloque "Seguinos en" + iconos a la derecha -->
     <div class="seguinos">
-      <p>Seguinos en:</p>
+      <p>Seguinos en</p>
       <div class="redes">
-        <a href="https://wa.me/541122771443" class="btn-whatsapp" target="_blank">
-          <img src="../imagenes/whats_app.png" alt="WhatsApp">
-        </a>
         <a href="https://www.instagram.com" target="_blank">
-          <img src="../imagenes/instagram.png" alt="Instagram">
-        </a>
-        <a href="https://www.facebook.com" target="_blank">
-          <img src="../imagenes/fb.png" alt="Facebook">
-        </a>
+            <img src="../imagenes/instagram.png" alt="Instagram">
+          </a>
+          <a href="https://www.facebook.com" target="_blank">
+            <img src="../imagenes/fb.png" alt="Facebook">
+          </a>
+          <a href="https://wa.me/541122771443" class="btn-whatsapp" target="_blank">
+            <img src="../imagenes/whats_app.png" alt="WhatsApp">
+          </a>
       </div>
     </div>
   </footer>
-<!--js bs-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
 </body>
 </html>
