--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -43,15 +43,18 @@
     </nav>
   </header>
 
+  <!-- ===================================================
+       BANNER: banner superior con fondo del arcoiris
+       =================================================== -->
     <section class="banner-general banner-contacto">
         <h2>Contacta con Tierra Viva</h2>
     </section>
-    
+
   <!-- ===================================================
        MAIN: formulario + mapa (responsive)
        =================================================== -->
   <main class="container py-5">
-    <h2 class="text-center mb-4 text-success fw-bold">Contacta con Tierra Viva</h2>
+    <h2 class="text-center mb-4 text-success fw-bold">Tu mensaje nos acerca a lo esencial</h2>
 
     <div class="row g-4 align-items-center">
 
