--- a/paginas/dulce.html
+++ b/paginas/dulce.html
@@ -44,6 +44,9 @@
     </nav>
   </header>
 
+  <!-- ===================================================
+       BANNER: banner superior con fondo de frutas
+       =================================================== -->
     <section class="banner-general banner-dulce">
         <h2>Dulces Artesanales Tierra Viva</h2>
     </section>
@@ -52,7 +55,7 @@
        MAIN: sección de productos dulces (Cards)
        =================================================== -->
   <main class="container py-5">
-    <h2 class="text-center mb-4 text-success fw-bold">Dulces Artesanales Tierra Viva</h2>
+    <h2 class="text-center mb-4 text-success fw-bold">El sabor dulce de lo hecho a mano</h2>
 
     <!-- Cards responsivas: 1 por fila en móvil, 3 en laptop -->
     <div class="row row-cols-1 row-cols-md-3 g-4">
