--- a/paginas/salado.html
+++ b/paginas/salado.html
@@ -44,6 +44,9 @@
     </nav>
   </header>
 
+   <!-- ===================================================
+       BANNER: banner superior con fondo de verdura
+       =================================================== -->
     <section class="banner-general banner-salado">
         <h2>Sabores Salados y Caseros</h2>
     </section>
@@ -52,7 +55,7 @@
        MAIN: carrusel de productos salados
        =================================================== -->
   <main class="container py-5">
-    <h2 class="text-center mb-4 text-success fw-bold">Especialidades Saladas Tierra Viva</h2>
+    <h2 class="text-center mb-4 text-success fw-bold">Lo salado, como debe ser</h2>
 
     <!-- Carrusel Bootstrap -->
     <div id="carouselSalados" class="carousel slide" data-bs-ride="carousel">
