--- a/index.html
+++ b/index.html
@@ -39,20 +39,29 @@
     </nav>
   </header>
 
-  <!-- ===================================================
+<!-- ===================================================
        MAIN: sección principal (única del index).
        Texto de bienvenida alineado a la derecha.
-       =================================================== -->
-  <main class="container-fluid d-flex align-items-center justify-content-end vh-100 bg-light">
-    <div class="text-end pe-5">
-        <div class="col-md-6 text-center">
-            <img src="imagenes/tierraViva.png" alt="Logo Tierra Viva" class="img-fluid" style="max-width: 70%; height: auto;">
-        </div>
-        <div class="col-md-6 text-end pe-5">
-            <h1 class="display-4 fw-bold text-success">Bienvenidos a<br>Tierra Viva</h1>
-            <p class="lead text-secondary">Productos caseros elaborados con amor, tradición y los mejores ingredientes naturales.</p>
-        </div>
+    =================================================== -->
+<main class="presentacion-grid">
+  <!-- Título centrado --
+    <h1 class="titulo">Tierra Viva</h1>-->
+
+  <!-- Logo a la izquierda -->
+    <div class="logo">
+      <img src="./imagenes/tierraViva.png" alt="Logo Tierra Viva">
     </div>
+
+  <!-- Contenido a la derecha -->
+    <div class="contenido">
+      <h2 class="display-4 fw-bold text-success">Bienvenidos</h2>
+      <p class="lead text-secondary">Productos caseros elaborados con amor, tradición y los mejores ingredientes naturales.</p>
+      <p>Mi madre me enseñó la cocina desde pequeña, y gracias a ella aprendí a disfrutar de los sabores y del placer de preparar alimentos con cariño.</p>
+      <p>El IAG me permitió descubrir nuevas técnicas y entender mejor cómo conservar lo natural de cada ingrediente.</p>
+      <p>Hoy, quiero compartir con ustedes mis sabores, hechos con dedicación y con todo el amor de quien cocina desde el corazón.</p>
+      <p>Porque aquí nos solo ofrecemos alimentos:</p>
+      <p style="text-align:center;"><strong>Compartimos momentos que saben a hogar.</strong></p>
+  </div>
 </main>
 
   <!-- ===================================================
