--- a/paginas/dulce.html
+++ b/paginas/dulce.html
@@ -48,7 +48,7 @@
        BANNER: banner superior con fondo de frutas
        =================================================== -->
     <section class="banner-general banner-dulce">
-        <h2>Dulces Artesanales Tierra Viva</h2>
+        <h2>Dulces Artesanales</h2>
     </section>
 
   <!-- ===================================================
@@ -70,7 +70,8 @@
         <img src="../imagenes/cascaritas-de-Naranja.png" class="card-img-top" alt="Cascaritas de Naranja">
         <div class="card-body">
             <h5 class="card-title">Cascaritas de Naranja</h5>
-            <p class="card-text">Finas cáscaras de naranjas confitadas con un taque de dulzura narural. Un clásica artesanal</p>
+            <p class="card-text">Finas cáscaras de naranjas confitadas con un taque de dulzura natural</p>
+            <p>Un clásica artesanal</p>
             <p>$$$$$</p>
         </div>
         </div>
@@ -82,36 +83,38 @@
         <img src="../imagenes/dulce-de-leche.png" class="card-img-top" alt="Dulce de Leche">
         <div class="card-body">
             <h5 class="card-title">Dulce de Leche</h5>
-            <p class="card-text">Suaves, cremosa y con el sabor tradicional de las recetar caseras. Puro placer argentina.</p>
+            <p class="card-text">Suaves, cremosa y con el sabor tradicional de las recetas caseras</p>
+            <p>Puro placer argentino</p>
             <p>$$$$$</p>
         </div>
         </div>
     </div>
 
-    <!-- Card 3: Mermelada de Kinotos -->
+    <!-- Card 3: Mermelada de Frutos Rojos -->
     <div class="col">
         <div class="card">
         <img src="../imagenes/frutos-rojos.png" class="card-img-top" alt="Frutos Rojo">
         <div class="card-body">
-            <h5 class="card-title">Frutos Rojo</h5>
-            <p class="card-text">Exquisita combinación de dulzur y acides, con trocitos naturales de kinotos</p>
-            <p>$$$$</p>
-        </div>
-        </div>
-    </div>
-
-    <!-- Card 4: Mermelada de Frutos Rojos -->
-    <div class="col">
-        <div class="card">
-        <img src="../imagenes/kinotos.png" class="card-img-top" alt="Mermelada de Kinotos">
-        <div class="card-body">
-            <h5 class="card-title">Mermelada de Kinotos</h5>
-            <p class="card-text">Frambuesas, moras y aráradanos, una mezclas deliciosa con aroma a campo y sabos intenso.</p>
+            <h5 class="card-title">Frutos Rojos</h5>
+            <p class="card-text">Frambuesas, moras y aráradanos</p>
+            <p>Una mezclas deliciosa con aroma a campo y sabor intenso</p>
             <p>$$$$$</p>
         </div>
         </div>
     </div>
-    </section>
+
+    <!-- Card 4: Mermelada de Kinotos -->
+    <div class="col">
+        <img src="../imagenes/kinotos.png" class="card-img-top" alt="Mermelada de Kinotos">
+        <div class="card-body">
+            <h5 class="card-title">Mermelada de Kinotos</h5>
+            <p class="card-text">Exquisita combinación de dulzura y acidez</p>
+            <p>Con trocitos naturales de kinotos</p>
+            <p>$$$$</p>
+        </div>
+        </div>
+    </div>
+   </section>
   </main>
 
   <!-- ===================================================
