--- a/paginas/salado.html
+++ b/paginas/salado.html
@@ -48,7 +48,7 @@
        BANNER: banner superior con fondo de verdura
        =================================================== -->
     <section class="banner-general banner-salado">
-        <h2>Sabores Salados y Caseros</h2>
+        <h2>Sabores Salados</h2>
     </section>
 
   <!-- ===================================================
