--- a/paginas/dulce.html
+++ b/paginas/dulce.html
@@ -83,7 +83,7 @@
         <img src="../imagenes/dulce-de-leche.png" class="card-img-top" alt="Dulce de Leche">
         <div class="card-body">
             <h5 class="card-title">Dulce de Leche</h5>
-            <p class="card-text">Suaves, cremosa y con el sabor tradicional de las recetas caseras</p>
+            <p class="card-text">Suave, cremosa y con el sabor tradicional de las recetas caseras</p>
             <p>Puro placer argentino</p>
             <p>$$$$$</p>
         </div>
@@ -97,7 +97,7 @@
         <div class="card-body">
             <h5 class="card-title">Frutos Rojos</h5>
             <p class="card-text">Frambuesas, moras y aráradanos</p>
-            <p>Una mezclas deliciosa con aroma a campo y sabor intenso</p>
+            <p>Una mezcla deliciosa con aroma a campo y sabor intenso</p>
             <p>$$$$$</p>
         </div>
         </div>
