vers 15 10 v.1 limpieza, modificacion ortografia, y sass

--- a/paginas/dulce.html
+++ b/paginas/dulce.html
@@ -70,8 +70,8 @@
         <img src="../imagenes/cascaritas-de-Naranja.png" class="card-img-top" alt="Cascaritas de Naranja">
         <div class="card-body">
             <h5 class="card-title">Cascaritas de Naranja</h5>
-            <p class="card-text">Finas cáscaras de naranjas confitadas con un taque de dulzura natural</p>
-            <p>Un clásica artesanal</p>
+            <p class="card-text">Finas cáscaras de naranjas confitadas con un toque de dulzura natural</p>
+            <p>Un clásico artesanal</p>
             <p>$$$$$</p>
         </div>
         </div>
@@ -83,7 +83,7 @@
         <img src="../imagenes/dulce-de-leche.png" class="card-img-top" alt="Dulce de Leche">
         <div class="card-body">
             <h5 class="card-title">Dulce de Leche</h5>
-            <p class="card-text">Suave, cremosa y con el sabor tradicional de las recetas caseras</p>
+            <p class="card-text">Suave, cremose y con el sabor tradicional de las recetas caseras</p>
             <p>Puro placer argentino</p>
             <p>$$$$$</p>
         </div>
@@ -96,7 +96,7 @@
         <img src="../imagenes/frutos-rojos.png" class="card-img-top" alt="Frutos Rojo">
         <div class="card-body">
             <h5 class="card-title">Frutos Rojos</h5>
-            <p class="card-text">Frambuesas, moras y aráradanos</p>
+            <p class="card-text">Frambuesas, moras y arándanos</p>
             <p>Una mezcla deliciosa con aroma a campo y sabor intenso</p>
             <p>$$$$$</p>
         </div>
