--- a/paginas/salado.html
+++ b/paginas/salado.html
@@ -76,7 +76,7 @@
           <img src="../imagenes/escabeche-Berenjenas.png" class="d-block w-100" alt="Escabeche de Berenjenas">
           <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-50 rounded p-3">
             <h5>Escabeche de Berenjenas</h5>
-            <p>Tradicional y sabroso, con especias naturales y aceite de oliva.</p>
+            <p>Tradicional y sabroso, con especias naturales y aceite natural.</p>
             <p>$$$$</p>
         </div>
         </div>
