16 10 v.2 probar otra vez

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Vinculación con la hoja de estilos personalizada -->
-  <link rel="stylesheet" href="css/style.css">
+  <!-- vinculacion con style>
+   <link rel="stylesheet" href="css/style.css"> este es el nuevo-->
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
 
   <!-- ===================================================
@@ -63,13 +66,13 @@
       <p style="text-align:center;"><strong>Compartimos momentos que saben a hogar.</strong></p>
   </div>
 </main>
-oy
+
   <!-- ===================================================
        FOOTER: igual en todas las páginas.
        Incluye logo inferior y redes sociales.
        =================================================== -->
   <footer class="d-flex justify-content-between align-items-center p-3 bg-success text-white">
-    <img src="imagenes/logo-TierraViva-pie.png" alt="Logo Tierra Viva" class="logo-pie">
+    <img src="./imagenes/logo-TierraViva-pie.png" alt="Logo Tierra Viva" class="logo-pie">
 
     <div class="seguinos">
       <p>Seguinos en</p>
