--- a/paginas/salado.html
+++ b/paginas/salado.html
@@ -9,8 +9,10 @@
   <!-- Bootstrap para el carrusel y el menú hamburguesa -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Estilos personalizados -->
-  <link rel="stylesheet" href="../css/style.css">
+  <!-- Estilo principal 
+  <link rel="stylesheet" href="../css/style.css"> este es el nuevo-->
+  <link rel="stylesheet" href="../css/main.css">
+  
 </head>
 
 <body>
